<?xml version="1.0" encoding="UTF-8"?>
<resources>
	<string name="hello">Hello World, ApkManagerActivity!</string> 
    <string name="app_name">Spinach App Manager</string> 
    <string name="tab_installed_text">Installed</string>
    <string name="tab_sdcard_text">SDCard</string>
    <string name="tab_move_text">Movable</string>
    <string name="tab_backup_text">Backup</string>
    <string name="tab_system_app_text">System</string>
    <string name="select_all_text">All</string>
    <string name="scan_installed_app_text">Checking installed application...</string>
    <string name="installed_app_counter_text">Installed Application(%1$d)</string>
    <string name="unInstall_text">UnInstall</string>
    <string name="backup_text">Backup</string>
    <string name="onekey_uninstall_text">Onekey</string>
    <string name="no_selected_uninstall_dialog_text">Please select applications which you want to uninstall.</string>
    <string name="no_selected_backup_dialog_text">Please select applications which you want to backup</string>
    <string name="confirm_uninstall_dialog_text">Are you sure to uninstall applications selected?</string>
    <string name="confirm_backup_dialog_text">Are you sure to backup applications selected?</string>
    <string name="confirm_onekey_uninstall_dialog_text">Are you sure to uninstall applications selected?(Note:this function need root permission)</string>
    <string name="confirm_sdcard_insert_dialog_text">Please check SD card is inserted.</string>
    <string name="backup_start_text">Start Backup Application...</string>
    <string name="backuping_text">Now back up:</string>
    <string name="backup_finish_text">Backup Applications Is Complete</string>
    <string name="onekey_uninstall_start_text">Start Onekey Uninstall Applications...</string>
    <string name="onekey_uninstalling_text">Now Onekey Uninstall:</string>
    <string name="onekey_uninstall_finish_text">Onekey Uninstall Applications Is Complete</string>
    <string name="confirm_button_dialog_text">OK</string>
    <string name="cancel_button_dialog_text">Cancel</string>
    <string name="install_text">Install</string>
    <string name="installed_text">Installed</string>
    <string name="uninstall_text">Uninstall</string>
    <string name="onekey_install_text">Onekey</string>
    <string name="scan_sdcard_apk_text">Scan apk files on sdcard...</string>
    <string name="scan_sdcard_apk_progress_text">Find:</string>
    <string name="sdcard_apk_counter_text">Apk Files(%1$d)</string>
    <string name="no_selected_install_dialog_text">Please select applications which you want to install.</string>
    <string name="confirm_install_dialog_text">Are you sure to install applications selected?</string>
    <string name="confirm_onekey_install_dialog_text">Are you sure to install applications selected?(Note:this function need root permission)</string>
    <string name="delete_text">Delete</string>
    <string name="no_selected_delete_dialog_text">Please select applications which you want to delete</string>
    <string name="confirm_delete_dialog_text">Are you sure to delete applications selected?</string>
    <string name="deleteing_text">Now delete:</string>
    <string name="delete_start_text">Start Delete Application...</string>
    <string name="delete_finish_text">Delete Applications Is Complete</string>
    <string name="onekey_install_start_text">Start Onekey Install Applications...</string>
    <string name="onekey_installing_text">Now Onekey Install:</string>
    <string name="onekey_install_finish_text">Onekey Install Applications Is Complete</string>
    <string name="backup_apk_counter_text">Backup Apk Files(%1$d)</string>
    <string name="move_analysis_start_text">Start analysis Applications...</string>
    <string name="analysising_text">Now analysis:</string>
    <string name="analysis_app_counter_text">Click Item and Press Move to SD card</string>
    <string name="analysis_app_counter_text2">Click Item and Press Move to Phone</string>
    <string name="analysis_app_counter_text3">Applications In This Screen Cann\'t Move</string>
    <string name="analysis_tab_phone_text">MOVABLE</string>
    <string name="analysis_tab_sdcard_text">ON SD CARD</string>
    <string name="analysis_tab_nomove_text">PHONE ONLY</string>
    <string name="unistall_myself_warning_text">Unistall this software will lead to follow actions fail.</string>
    <string name="twice_press_back_quit_text">Once Again Press Back Button to Quit</string>
    <string name="version_name">version:</string>
    <string name="about_text">About</string>
    <string name="feedback_text">Feedback</string>
    <string name="logo_text">2012Spinach Labs</string>
    <string name="version_text">Version:</string>
    <string name="ok">ok</string>
    <string name="move_to_sdcard">To SDcard</string>
    <string name="move_to_rom">To Rom</string>
    <string name="apk_no_SDcard_text">Not found SD card...</string>
    <string name="no_movable_app">Not found movable apps</string>
   
    <string name="feedback_content_hint">Please enter your suggestion !!</string>
    <string name="submit">Submit</string>
    <string name="feedback_record">Feedback record</string>
    <string name="request_content">Please enter your suggestion</string>
    <string name="waiting">please wait…</string>
    <string name="feedback_success">Thank you for your best suggestion.</string>
    <string name="no_selected_move_dialog_text">Please select one app which you want to move！</string>
    <string name="confirm_move_dialog_text">Are you sure to move this app?</string>
    <string name="no_sdcard_apk_text">Can not find apk files...</string>
    <string name="no_app_text">Your device have not install any apps...</string>
</resources>