<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout 
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout 
        android:gravity="center_horizontal" 
        android:layout_gravity="center" 
        android:orientation="vertical" 
        android:background="@drawable/about_bg"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
	    <ImageView 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_marginTop="100.0dip" 
			android:layout_gravity="center"
			android:src="@drawable/logo" 
		    android:scaleType="fitXY" 
		    android:adjustViewBounds="true" />
	    <TextView 
	        android:layout_marginTop="10.0dip" 
		    android:text="@string/app_name"
		    android:textSize="20.0dip" 
		    android:textStyle="bold" 
		    android:textColor="@color/white"
		    android:layout_gravity="center"
		    android:id="@+id/about_logo" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" />
	    <TextView 
	        android:layout_marginTop="10.0dip" 
	    	android:textSize="16.0dip" 
		    android:textColor="@color/white"
		    android:id="@+id/about_version" 
		    android:layout_gravity="center"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		   />
	    <TextView 
	        android:layout_marginTop="20.0dip" 
	    	android:textSize="12.0dip" 
		    android:textColor="@color/green"
		    android:id="@+id/about_me" 
		    android:layout_gravity="center"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/logo_text"
		   />
	     <Button 
	        android:layout_marginTop="10.0dip" 
	        android:id="@+id/about_ok"
	        
	        android:layout_gravity="center"
	        android:layout_width="100.0dip" 
	        android:layout_height="40.0dip" 
	        android:text="@string/ok"  />
   </LinearLayout>  
</LinearLayout>